Created custom exceptions for our API